# Zero2ProdLearningRust

./: Cargo.toml  Dockerfile
.github/workflows/: audit.yml  general.yml
configuration/: base.yaml  production.yaml
migrations/: 20240201183715_create_subscriptions_table.sql  20240210083300_make_status_not_null_in_subscriptions.sql  20240224184041_seed_user.sql  20240303174328_fix_naming_of_created_at.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  main.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
