[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.4.1"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
config = "0.11"
chrono = "0.4.33"

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dependencies.uuid]
version = "1.6.1"
features = ["serde", "v4"]

[dev-dependencies]
reqwest = "0.11"
