[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.4.1"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
config = "0.14"
chrono = "0.4.33"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
once_cell = "1.19.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.9"
serde-aux = "4.4.0"
unicode-segmentation = "1.10.1"
validator = "0.16.1"

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dependencies.uuid]
version = "1.6.1"
features = ["serde", "v4"]

[dev-dependencies]
claims = "0.7"
reqwest = "0.11"
